--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
     <!-- <base href="/web/" /> -->
-    <base href="$FLUTTER_BASE_HREF" />
+    <base href="/web/" />
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
