--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,7 @@
   -->
   <!-- <base href="/web/" /> -->
   <!-- <base href="/web/" /> -->
+  <!-- <base href="/web/" /> -->
   <base href="$FLUTTER_BASE_HREF" />
 
   <meta charset="UTF-8" />
