--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
   <!-- <base href="/web/" /> -->
   <!-- <base href="/web/" /> -->
   <!-- <base href="/web/" /> -->
-  <base href="$FLUTTER_BASE_HREF" />
+  <base href="/new2_mercari_bold/" />
 
   <meta charset="UTF-8" />
   <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
