--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <!-- <base href="/web/"> -->
+<!--  <base href="/new2_mercari_bold/" />-->
   <base href="$FLUTTER_BASE_HREF" />
 
   <meta charset="UTF-8">
